--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <canvas></canvas>
 
 
-        <div id="slider-container" class="slider-container" style="width: 100%">
+        <div id="slider-container" class="slider-container" style="width: 100%; overflow: hidden;">
             <img class="mySlides" src="res/1.jpeg" style="width: 100%;">
             <img class="mySlides" src="res/2.jpeg" style="width: 100%;">
             <img class="mySlides" src="res/3.jpeg" style="width: 100%;">
